patch.: fixed link color to more contrast in dark mode

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -14,7 +14,7 @@
 
   --indigo: #2c3e50;
 
-  --bluecat: #5b7be6;
+  --bluecat: #8FA9FF;
   --bluecat-light: #0054DB;
 
   --brand: #9B32FF;
